fix: switched initial from light to dark mode to avoid flash

--- a/app/globals.css
+++ b/app/globals.css
@@ -7,7 +7,7 @@
 html,
 body {
   max-width: 100vw;
-  color-scheme: light;
+  color-scheme: dark;
   min-height: 200vh;
 }
 
@@ -19,13 +19,13 @@ html {
   /* For box shadow to be used as a border */
   --subtleGlow: 0 0px 10px -2px var(--base);
 
-  --background: #E9F8FF;
+  --background: #030B0E;
   background-color: var(--background);
 }
 
-html.darkMode {
-  --background: #030B0E;
-  color-scheme: dark;
+html.lightMode {
+  --background: #E9F8FF;
+  color-scheme: light;
 }
 
 button {
